package com.seproje.hospital.auth;

import com.seproje.hospital.auth.dto.AuthRequest;
import com.seproje.hospital.auth.dto.LoginResponseDTO;
import com.seproje.hospital.session.Session;
import com.seproje.hospital.session.SessionConstants;
import com.seproje.hospital.session.SessionService;
import io.swagger.v3.oas.annotations.Operation;
import io.swagger.v3.oas.annotations.tags.Tag;
import jakarta.servlet.http.Cookie;
import jakarta.servlet.http.HttpServletRequest;
import jakarta.servlet.http.HttpServletResponse;
import jakarta.validation.Valid;
import lombok.RequiredArgsConstructor;
import org.springframework.http.ResponseEntity;
import org.springframework.web.bind.annotation.*;

import java.util.Arrays;

@RequiredArgsConstructor
@RestController
@RequestMapping("/api/auth")
@Tag(name = "Auth", description = "Session cookie tabanlı giriş ve çıkış işlemleri")
public class AuthController {

    private final AuthService authService;
    private final SessionService sessionService;

    @Operation(
            summary = "Kullanıcı girişi yapar",
            description = "email ve password ile giriş yapar. Başarılı cevapta HTTP-only session cookie set edilir; sonraki /api çağrılarında bu cookie kullanılır."
    )
    @PostMapping("/login")
    public ResponseEntity<LoginResponseDTO> login(@Valid @RequestBody AuthRequest request, HttpServletResponse response) {
        Session session = authService.login(request);

        Cookie cookie = new Cookie(SessionConstants.COOKIE_NAME, session.getToken());
        cookie.setHttpOnly(true);
        cookie.setPath("/");
        cookie.setMaxAge(60 * 60 * 24 * 7);

        response.addCookie(cookie);

        LoginResponseDTO responseDTO = LoginResponseDTO.builder()
                .type(session.getUserType())
                .build();

        return ResponseEntity.ok(responseDTO);
    }

    @Operation(
            summary = "Kullanıcı çıkışı yapar",
            description = "Aktif session cookie varsa invalidate eder ve cookie'yi tarayıcıdan siler."
    )
    @PostMapping("/logout")
    public ResponseEntity<Void> logout(HttpServletRequest request, HttpServletResponse response) {
        if (request.getCookies() != null) {
            Arrays.stream(request.getCookies())
                    .filter(c -> SessionConstants.COOKIE_NAME.equals(c.getName()))
                    .findFirst()
                    .flatMap(c -> sessionService.getByToken(c.getValue()))
                    .ifPresent(sessionService::invalidate);
        }

        Cookie expired = new Cookie(SessionConstants.COOKIE_NAME, "");
        expired.setHttpOnly(true);
        expired.setPath("/");
        expired.setMaxAge(0);
        response.addCookie(expired);

        return ResponseEntity.ok().build();
    }
}
